--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,10 +26,12 @@ dist.jar=${dist.dir}/Examples.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.becker.jar=H:\\Profile\\Desktop\\ICS3UI work\\becker.jar
+file.reference.projectile_en.jar=H:\\Profile\\Desktop\\projectile_en.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.becker.jar}
+    ${file.reference.becker.jar}:\
+    ${file.reference.projectile_en.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
